config/kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-moj
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: contact-moj
  template:
    metadata:
      labels:
        app: contact-moj
    spec:
      containers:
        - name: webapp
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["./run.sh"]
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
        - name: jobs
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          command: ["./run-sidekiq.sh"]
