config/kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-moj-service
  labels:
    app: contact-moj-service
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  - port: 9394
    name: metrics
    targetPort: 9394    
  selector:
    app: contact-moj
