config/kubernetes/staging/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-moj-ingress
  namespace: contact-moj-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: contact-moj-ingress-contact-moj-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - staging.contact-moj.service.justice.gov.uk
      secretName: contact-moj-certificate
  rules:
    - host: staging.contact-moj.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: contact-moj-service
                port:
                  number: 3000
