config/kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: contact-moj-ingress
  namespace: contact-moj-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
spec:
  tls:
    - hosts:
        - staging.contact-moj.service.justice.gov.uk
      secretName: contact-moj-certificate
  rules:
    - host: staging.contact-moj.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: contact-moj-service
              servicePort: 3000
